# Colony

./: README.md
electrical/: .gitignore
electrical/batboard/: batboard.brd  batboard.sch  batboard_rev2.brd  batboard_rev2.sch
electrical/bomboard/: bomfly_jst.brd  bomfly_jst.sch  scout_bom.brd  scout_bom.sch
electrical/breakfly/: breakfly_rev2.brd  breakfly_rev2.sch
electrical/charging/: ChargingBoard.brd  ChargingBoard.pro  ChargingBoard.sch  Functional Schematic.sch  eagle.epf
electrical/diagnostic/: dyno_encoders.brd  dyno_encoders.sch
electrical/flyswatter/: flyswatter.sch
electrical/forklift/: accBoard.brd  jabinder.lbr
electrical/forklift/code/: Makefile  analog.c  analog.h  forklift.c  motor.c  motor.h  twi.c
electrical/forklift/code/arduino-test/: arduino-test.ino
electrical/lbr/: 2layer.cam  4layer.cam  4layer_6mil_15mil.dru  aperley.lbr  goldphoenix.dru  jabinder.lbr  kwoo.lbr  rc.lbr  scout.lbr
electrical/paintboard/: paintboard.brd  paintboard.sch
electrical/paintboard/code/: Makefile  geiger.c  geiger.h  main.c  motor.c  motor.h  servo.c  servo.h  sol.c  sol.h
electrical/scoutfly/: charging_test.brd  charging_test.sch  scoutfly.brd  scoutfly.dimensions.ger  scoutfly.sch  scoutfly_atmel.brd  scoutfly_atmel.sch  scoutfly_nxp.brd  scoutfly_nxp.sch  scoutfly_power.brd  scoutfly_power.sch  scoutfly_reduced.brd  scoutfly_reduced.sch  scoutfly_reduced_switching.brd  scoutfly_reduced_switching.sch  scoutfly_rev3.brd  scoutfly_rev3.sch
electrical/scoutshield/: scoutshield_v1.brd  scoutshield_v1.sch  todo.txt
high-level/: README.md
high-level/catkin/: .rosinstall  setup.sh
high-level/catkin/misty_working/buttons/: CMakeLists.txt  mainpage.dox  package.xml
high-level/catkin/misty_working/buttons/src/: buttons.h
high-level/catkin/misty_working/buttons/src/buttons/msg/: __init__.py  _button_event.py
high-level/catkin/misty_working/encoders/: CMakeLists.txt  mainpage.dox  package.xml
high-level/catkin/misty_working/libscout/: CMakeLists.txt  mainpage.dox  package.xml
high-level/catkin/misty_working/libscout/launch/: rosscout.launch
high-level/catkin/misty_working/libscout/src/: Behavior.cpp  BehaviorList.cpp  BehaviorProcess.cpp  CliffsensorControl.cpp  CliffsensorControl.h  EncodersControl.cpp  HeadlightControl.cpp  HeadlightControl.h  PaintBoardControl.cpp  Sensors.h  SonarControl.h  WirelessReceiver.h  WirelessSender.cpp
high-level/catkin/misty_working/libscout/src/behaviors/: navigationMap.h  wl_test.h
high-level/catkin/misty_working/libscout/src/helper_classes/: Order.cpp
high-level/catkin/misty_working/libscout/src/test_behaviors/: .danger_marking.h.swp  Odometry_new.h  WH_Robot.cpp  danger_marking_blind.cpp  danger_marking_blind.h  maze_solve_simple.cpp
high-level/catkin/misty_working/messages/: .CMakeLists.txt.swp  mainpage.dox
high-level/catkin/misty_working/motors/: mainpage.dox  package.xml
high-level/catkin/misty_working/motors/src/motors/msg/: _set_motors.py
high-level/catkin/misty_working/scoutsim/: CMakeLists.txt  GUI.py  behaviorList.txt
high-level/catkin/misty_working/scoutsim/catkin_generated/: env_cached.sh  setup.develspace.context.py  setup.installspace.context.py
high-level/catkin/misty_working/scoutsim/catkin_generated/installspace/: setup.sh
high-level/catkin/misty_working/scoutsim/devel/: .catkin  .rosinstall  setup.zsh
high-level/catkin/misty_working/scoutsim/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
high-level/catkin/misty_working/scoutsim/images/: scout.xcf
high-level/catkin/misty_working/scoutsim/launch/: race.launch
high-level/catkin/misty_working/scoutsim/src/: noise_gen.h  scout.h  sim_frame.cpp
high-level/rosbuild/: developers.py
high-level/rosbuild/scout/: Doxyfile  standard_ros_compile
high-level/rosbuild/scout/buttons/: manifest.xml
high-level/rosbuild/scout/encoders/: CMakeLists.txt  manifest.xml
high-level/rosbuild/scout/libscout/: CMakeLists.txt  spawn_ems.sh
high-level/rosbuild/scout/libscout/src/: Behavior.cpp  BehaviorList.template.h  BehaviorProcess.h  ButtonControl.h  EncodersControl.h  LinesensorControl.cpp  LinesensorControl.h  Sensors.cpp  Sensors.h  constants.h
high-level/rosbuild/scout/libscout/src/behaviors/: draw_ccw_circle.cpp  draw_cw_circle.h
high-level/rosbuild/scout/libscout/src/helper_classes/: Order.h
high-level/rosbuild/scout/libscout/src/introlab/misty/: draw_misty_name.h
high-level/rosbuild/scout/libscout/src/test_behaviors/: ApproachEmitter.cpp  ApproachEmitter.h  ParkScout.cpp  danger_marking.cpp  danger_marking.h  smart_runaround.cpp  smart_runaround.h
high-level/rosbuild/scout/linesensor/: CMakeLists.txt
high-level/rosbuild/scout/motors/: CMakeLists.txt  manifest.xml
high-level/rosbuild/scout/painter/: CMakeLists.txt  mainpage.dox
high-level/rosbuild/scout_avr/: Makefile  manifest.xml
high-level/rosbuild/scout_gumstix/: README
high-level/scoutos/: .rosinstall  license.txt  setup.sh
high-level/scoutos/scout/: .gitignore  make_clean.sh  scout_client  setup.sh  stack.xml
high-level/scoutos/scout_avr/: mainpage.dox
high-level/scoutos/scout_gumstix/: kernel-scout.patch  u-boot-scout.patch
low-level/: i2c.c  i2c_test.ino  iomux-mx6q.h  iomux-v3.h  pwm_test.ino  test.c
scoutos2/misty_working/libscout/: CMakeCache.txt  cmake_install.cmake  generate_behavior_lists.py
scoutos2/misty_working/linesensor/: CMakeLists.txt  package.xml
scoutos2/misty_working/messages/: CMakeLists.txt  package.xml
scoutos2/misty_working/messages/msg/: button_event.msg  sonar_distance.msg
scoutos2/misty_working/messages/src/messages/msg/: _WirelessPacket.py  __init__.py  _set_headlights.py
scoutos2/misty_working/messages/src/messages/srv/: _query_cliff.py  _query_encoders.py  _query_linesensor.py  _query_metal_detector.py  _query_paintboard.py  _reset_encoders.py  _sonar_set_scan.py  _sonar_toggle.py
scoutos2/misty_working/messages/srv/: query_cliff.srv  query_linesensor.srv
scoutos2/misty_working/motors/: CMakeLists.txt
scoutos2/misty_working/scoutsim/: CMakeCache.txt  mainpage.dox
(+184 files in other folders)
