<?xml version="1.0"?>
<package>
  <name>buttons</name>
  <version>0.0.0</version>
  <description>
    buttons
    Module to respond to button events.
  </description>
  <maintainer email="pdeo@andrew.cmu.edu">Priya</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>messages</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>messages</run_depend>
  <export>
  </export>
</package>
