<package>
  <name>encoders</name>
  <version>0.0.0</version>
  <description>
     encoders
     Module to provide all encoder control functionality.
  </description>
  <maintainer email="lalitha@andrew.cmu.edu">Lalitha</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>messages</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>messages</run_depend>
  <export>
  </export>
</package>
