<?xml version="1.0"?>
<package>
  <name>libscout</name>
  <version>0.0.0</version>
  <description>
    libscout
    All the library/behaviors of colony scout
  </description>
  <maintainer email="Ben@example.com">Ben</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>motors</build_depend>
  <build_depend>encoders</build_depend>
  <build_depend>buttons</build_depend>
  <build_depend>linesensor</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>motors</run_depend>
  <run_depend>encoders</run_depend>
  <run_depend>buttons</run_depend>
  <run_depend>linesensor</run_depend>
  <export>
  </export>
</package>
