<?xml version="1.0"?>
<package>
  <name>motors</name>
  <version>0.0.0</version>
  <description>
    motors
    Module to drive the motors and provide all motor control functionality
  </description>
  <maintainer email="bwasserman@andrew.cmu.edu">Ben Wasserman</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>messages</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>messages</run_depend>
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib"/>
  </export>
</package>
